--- a/Podkast/Base.lproj/Main.storyboard
+++ b/Podkast/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                 <rect key="frame" x="20" y="685.33333333333337" width="353" height="53.666666666666629"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0rh-22-Tdh">
-                                        <rect key="frame" x="20.000000000000004" y="8" width="53.333333333333343" height="37.666666666666664"/>
+                                        <rect key="frame" x="20.000000000000004" y="8" width="54.333333333333343" height="37.666666666666664"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="gobackward.15" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
@@ -74,8 +74,8 @@
                                             <action selector="back15Pressed:" destination="Ff9-SE-nNw" eventType="touchUpInside" id="d5E-34-GrG"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TjJ-t1-Pi8">
-                                        <rect key="frame" x="149.33333333333334" y="8" width="54.333333333333343" height="37.666666666666664"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TjJ-t1-Pi8">
+                                        <rect key="frame" x="112.33333333333334" y="8" width="0.0" height="37.666666666666664"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="play.circle" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
@@ -86,7 +86,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2j6-4X-hWS">
-                                        <rect key="frame" x="279.66666666666669" y="8" width="53.333333333333314" height="37.666666666666664"/>
+                                        <rect key="frame" x="278.66666666666669" y="8" width="54.333333333333314" height="37.666666666666664"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="goforward.15" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
@@ -129,29 +129,29 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tcJ-3m-0Of">
-                                <rect key="frame" x="-29.333333333333343" y="109" width="451.66666666666674" height="303"/>
+                                <rect key="frame" x="30" y="109" width="333" height="321"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Now playing:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y62-Rs-9Ws">
-                                        <rect key="frame" x="94" y="11.999999999999996" width="263.66666666666669" height="48.666666666666657"/>
-                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="40"/>
+                                        <rect key="frame" x="67.666666666666686" y="12" width="198" height="36.666666666666664"/>
+                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IEN-Cn-EsU">
-                                        <rect key="frame" x="151" y="70.666666666666657" width="150" height="150"/>
+                                        <rect key="frame" x="91.666666666666686" y="58.666666666666657" width="150" height="150"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="3ou-SH-tCw"/>
                                             <constraint firstAttribute="width" constant="150" id="GuY-QB-9gM"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Title that goes on really long" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVE-gZ-FLd">
-                                        <rect key="frame" x="30" y="230.66666666666669" width="391.66666666666669" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Title that goes on really long" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVE-gZ-FLd">
+                                        <rect key="frame" x="41.666666666666686" y="218.66666666666669" width="250" height="60"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" red="0.52873557806015015" green="0.91005921363830566" blue="0.86123919486999512" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJf-Wt-Tj4">
-                                        <rect key="frame" x="30" y="270.66666666666669" width="391.66666666666669" height="20.333333333333314"/>
+                                        <rect key="frame" x="41.666666666666686" y="288.66666666666669" width="250" height="20.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="systemGrayColor"/>
                                         <nil key="highlightedColor"/>
@@ -163,14 +163,23 @@
                                 </constraints>
                                 <directionalEdgeInsets key="directionalLayoutMargins" top="12" leading="30" bottom="12" trailing="30"/>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Record podcast!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRj-fY-4Cr">
+                                <rect key="frame" x="134" y="504" width="125.33333333333331" height="21"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Iog-rZ-XJU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Ew9-gc-3Le" firstAttribute="leading" secondItem="Iog-rZ-XJU" secondAttribute="leading" constant="20" id="3ei-Zb-miU"/>
+                            <constraint firstItem="GRj-fY-4Cr" firstAttribute="centerX" secondItem="eA3-7u-BR5" secondAttribute="centerX" id="DdY-fU-EZR"/>
+                            <constraint firstAttribute="trailing" secondItem="tcJ-3m-0Of" secondAttribute="trailing" constant="30" id="MiQ-Lz-FNK"/>
                             <constraint firstItem="x2V-j5-wDx" firstAttribute="centerX" secondItem="eA3-7u-BR5" secondAttribute="centerX" id="Xqi-gj-XJn"/>
                             <constraint firstItem="nKl-Vr-2jk" firstAttribute="centerX" secondItem="eA3-7u-BR5" secondAttribute="centerX" id="YQD-0f-obu"/>
                             <constraint firstItem="Iog-rZ-XJU" firstAttribute="trailing" secondItem="Ew9-gc-3Le" secondAttribute="trailing" constant="20" id="Zg3-NN-1rJ"/>
+                            <constraint firstItem="tcJ-3m-0Of" firstAttribute="leading" secondItem="eA3-7u-BR5" secondAttribute="leading" constant="30" id="aXQ-Rg-SSH"/>
                             <constraint firstItem="x2V-j5-wDx" firstAttribute="centerY" secondItem="eA3-7u-BR5" secondAttribute="centerY" id="eXV-YU-dag"/>
                             <constraint firstItem="Ahk-5T-rc7" firstAttribute="centerX" secondItem="eA3-7u-BR5" secondAttribute="centerX" id="hBZ-g4-CJD"/>
                             <constraint firstItem="tcJ-3m-0Of" firstAttribute="top" secondItem="Iog-rZ-XJU" secondAttribute="top" constant="50" id="qhY-6E-jlt"/>
@@ -191,6 +200,7 @@
                         <outlet property="nothingPlayingLabel" destination="Ahk-5T-rc7" id="vhm-vu-IXe"/>
                         <outlet property="nowPlayingLabel" destination="Y62-Rs-9Ws" id="Thh-6h-e0C"/>
                         <outlet property="playbackControls" destination="Ew9-gc-3Le" id="kbb-La-NK5"/>
+                        <outlet property="recordPodcastLabel" destination="GRj-fY-4Cr" id="4k5-ng-bRv"/>
                         <outlet property="topAlertLabel" destination="z8c-t6-E3z" id="kzS-Oz-H8X"/>
                         <outlet property="trackCard" destination="tcJ-3m-0Of" id="57z-Y0-cNs"/>
                         <outlet property="trackNameLabel" destination="gVE-gZ-FLd" id="mgf-Xp-Uhr"/>
@@ -276,13 +286,13 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Episode" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KA-CL-h5X">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Episode" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KA-CL-h5X">
                                                             <rect key="frame" x="0.0" y="10.999999999999996" width="54.666666666666664" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Show" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P86-6B-Fbf">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Show" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P86-6B-Fbf">
                                                             <rect key="frame" x="0.0" y="28.999999999999996" width="31" height="14.333333333333332"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
